RESOLVED FIXED46010
webkitAnimationEnd event doesn't fire when skipping over final iteration
https://bugs.webkit.org/show_bug.cgi?id=46010
Summary webkitAnimationEnd event doesn't fire when skipping over final iteration
Mihai Parparita
Reported 2010-09-17 16:10:13 PDT
webkitAnimationEnd event doesn't fire when skipping over final iteration
Attachments
Patch (5.19 KB, patch)
2010-09-17 16:22 PDT, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2010-09-17 16:22:18 PDT
Mihai Parparita
Comment 2 2010-09-17 16:24:35 PDT
Simon, could you review this? The scenario described isn't quite as preposterous/unlikely as it would seem based on the new test, I noticed this when running some other animation layout tests with Guard Malloc enabled.
WebKit Commit Bot
Comment 3 2010-09-18 16:02:57 PDT
Comment on attachment 67969 [details] Patch Clearing flags on attachment: 67969 Committed r67797: <http://trac.webkit.org/changeset/67797>
WebKit Commit Bot
Comment 4 2010-09-18 16:03:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.