2010-09-18  Mihai Parparita  <mihaip@chromium.org>

Reviewed by Simon Fraser.

        webkitAnimationEnd event doesn't fire when skipping over final iteration
        https://bugs.webkit.org/show_bug.cgi?id=46010

        Add a test with a short enough animation interval (0.001s) that we
        appear to always skip the second iteration.

        * animations/animation-end-event-short-iterations-expected.txt: Added.
        * animations/animation-end-event-short-iterations.html: Added.
2010-09-18  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Simon Fraser.

        webkitAnimationEnd event doesn't fire when skipping over final iteration
        https://bugs.webkit.org/show_bug.cgi?id=46010

        It's possible for AnimationBase::fireAnimationEventsIfNeeded to decide
        that the animation is ended while we're in the looping state, if the
        animation timer never fires during an iteration. That then fails the
        assert in AnimationBase::updateStateMachine (we don't expect
        AnimationStateInputEndTimerFired while in the looping state). Jump the
        state to AnimationStateEnding, which is more accurate.

        Test: animations/animation-end-event-short-iterations.html

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::fireAnimationEventsIfNeeded):

Canonical link: https://commits.webkit.org/58503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67797 268f45cc-cd09-0410-ab3c-d52691b4dbfc